<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="17dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:background="#364DE7"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="391dp"
        android:layout_height="68dp"
        android:paddingStart="7dp"
        android:layout_marginTop="47dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/question"
        android:textSize="24sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/userNumber"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/user_Input"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_text_background"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:onClick="home"
            android:text="@string/home"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_marginTop="20sp"
        android:paddingTop="30sp"
        android:paddingStart="30sp"
        android:text=""
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:layout_marginTop="20dp"
        android:paddingBottom="40sp"
        android:inputType="number"
        android:paddingStart="30sp"
        android:paddingTop="30sp"
        android:textSize="30sp"
        />

</LinearLayout>